prevent nav icon wrapping

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,9 +7,9 @@
 }
 
 .header-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 54px;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
   position: fixed;
   box-sizing: border-box;
   width: 100vw;
@@ -21,15 +21,12 @@
 }
 
 .header-container p {
-  grid-area: 1 / 1 / 2 / 2;
-  justify-self: start;
+  flex: 1;
   margin: 0;
   font-size: 42px;
 }
 
 .header-container input {
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: center;
   background-color: rgb(250, 250, 250);
   border: 1px solid rgb(219, 219, 219);
   cursor: text;
@@ -47,9 +44,9 @@
 }
 
 .header-container .nav {
-  min-width: 192px;
-  grid-area: 1 / 3 / 2 / 4;
-  justify-self: end;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .header-container .nav img {
